[package]
name = "sinatra-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "1", features = ["v4"]}
serde = {version = "1", features = ["derive"]}
aws-config = "0"
env_logger = "0"
log = "0"
strum =  {version = "0", features = ["derive"]}
derive_more = "0"
