[package]
name = "sinatra-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "1", features = ["v4"]}
serde = {version = "1", features = ["derive"]}
env_logger = "0"
log = "0"
mongodb = "2"
dotenv = "0"
